Last update: 30 June 2013

Version 1.6-development <???>

   * Major changes since 1.5
     - Add TeraSender code (#885, #899)
       - Allows for faster HTML5 uploads
       - Upgrade note: new configuration options
     - New layout of My Files page (#597)
       - add number of downloads
     - Recipient address autocomplete based on previous recipients (#821)
     - Add selector when multiple mail adresses are available (#184)
       Modified patch from Thijs Kinkhorst

   * Changes since 1.5
     - Voucher Subject configurable (#774)
       Patch contributed by Thijs Kinkhorst
     - Add a customisable footer through the language definitions (#871)
       Modified patch from Jean-Philippe Evrard, BELNET
     - logout.php and invalidvoucher.php removed and integrated in
       the core index.php (#904)
       - Upgrade note: needs change in config.php when upgrading,
         logout page breaks if config.php isn't adapted
     - New download.php (#858)
       - redo logic for mail sending and logging
       - added partial download (HTTP range) functionality (not used yet)
       - some cleanup
     - Add sqlite init-script and 'how to' (#898)
       Patch contributed by Dick Visser

   * Fixes since 1.5
     - Optimise PDO Query row count statements (#888)
       Patch from Dick Visser
     - Remove unused validVoucher() function
       Patch from Thijs Kinkhorst
     - Hash fileuid for pending/validateupload entry (#884)
     - Replace $_REQUEST['PHPSESSID'] with session_id() (#897)
     - Fix declarations for fileexpirydate and logdate in mysql init script (#932)

Version 1.5 <3 March 2013>

   * Release 1.5

   * Major changes since 1.1.1
     - User interface is now HTML based, no Flash required except when
       uploading files with a non-HTML5-capable browser
     - Multilanguage support in web interface
     - Support for multiple database backends (PDO)
     - Changes in configuration (see Upgrade Notes)

   * Changes since 1.5-rc1