@@ -261,6 +261,10 @@ if ( count($useremail) > 1 ) {
 ?>   </td>
         </tr>
       <tr>
+        <td class="" id="voucher_message"><?php echo lang("_MESSAGE"); ?>: (<?php echo lang("_OPTIONAL"); ?>)</td>
+        <td colspan="2"><textarea name="vouchermessage" cols="57" rows="4" id="vouchermessage"></textarea></td>
+      </tr>
+      <tr>
         <td class="mandatory" id="vouchers_expirydate"><?php echo lang("_EXPIRY_DATE"); ?>:</td>
         <td><input id="datepicker" onchange="validate_expiry()" title="<?php echo lang('_DP_dateFormat'); ?>" />
         <div id="expiry_msg" class="validation_msg" style="display:none"><?php echo lang("_INVALID_EXPIRY_DATE"); ?></div>
@@ -281,6 +285,7 @@ if ( count($useremail) > 1 ) {
     <tr class="headerrow">
       <td id="vouchers_header_from"><strong><?php echo lang("_FROM"); ?></strong></td>
       <td id="vouchers_header_to"><strong><?php echo lang("_TO"); ?></strong></td>
+      <td id="vouchers_header_message"><strong><?php echo lang("_MESSAGE"); ?></strong></td>
       <td id="vouchers_header_created"><strong><?php echo lang("_CREATED"); ?></strong></td>
       <td id="vouchers_header_expiry"><strong><?php echo lang("_EXPIRY"); ?></strong></td>
       <td></td>
@@ -289,7 +294,12 @@ if ( count($useremail) > 1 ) {
 	$i = 0; 
 	foreach($json_o as $item) {
 		$i += 1; // counter for file id's
-		echo "<tr><td>" .$item['filefrom'] . "</td><td>" .$item['fileto'] . "</td><td>" .date(lang('datedisplayformat'),strtotime($item['filecreateddate'])) . "</td><td>" .date(lang('datedisplayformat'),strtotime($item['fileexpirydate'])) . "</td><td><div  style='cursor:pointer;border:0'><img id='btn_deletevoucher_".$i."' src='images/shape_square_delete.png' alt='' title='".lang("_DELETE")."' onclick='confirmdelete(".'"' .$item['filevoucheruid'] . '"'. ")' /></div></td></tr>"; //etc
+        echo "<tr><td>" .$item['filefrom'] . "</td><td>" .$item['fileto'] . "</td><td class='HardBreak'>";
+        if($item['filemessage'] != "")
+        {
+            echo "<img src='images/page_white_text_width.png' border='0' alt='' title='".utf8tohtml($item['filemessage'],TRUE). "' />";
+        }
+        echo "</td><td>" .date($lang['datedisplayformat'],strtotime($item['filecreateddate'])) . "</td><td>" .date($lang['datedisplayformat'],strtotime($item['fileexpirydate'])) . "</td><td><div  style='cursor:pointer;'><img id='btn_deletevoucher_".$i."' src='images/shape_square_delete.png' alt='' title='".lang("_DELETE")."' onclick='confirmdelete(".'"' .$item['filevoucheruid'] . '"'. ")' border='0' /></div></td></tr>"; //etc
 	}
 ?>
   </table>
